--- a/src/learn.html
+++ b/src/learn.html
@@ -178,6 +178,46 @@
                           <a id="ver_ia" class="btn-floating btn-li">
                             <i class="fa fa-trophy"></i></a>
                           </div>
+                        <div id="learn-d-1" class="col-lg-2 offset-lg-1">
+                          <form action="#">
+                            <p>
+                              <label>
+                                <input class="with-gap" name="group1" type="radio" />
+                                <span>Python</span>
+                              </label>
+                            </p>
+                            <p>
+                              <label>
+                                <input class="with-gap" name="group1" type="radio" />
+                                <span>Algoritmos</span>
+                              </label>
+                            </p>
+                            <p>
+                              <label>
+                                <input class="with-gap" name="group1" type="radio"  />
+                                <span>Arquitectura y sistemas</span>
+                              </label>
+                            </p>
+                            <p>
+                              <label>
+                                <input class="with-gap" name="group1" type="radio" />
+                                <span>Funcional</span>
+                              </label>
+                            </p>
+                            <p>
+                              <label>
+                                <input class="with-gap" name="group1" type="radio" />
+                                <span>Bases de datos</span>
+                              </label>
+                            </p>
+                            <p>
+                              <label>
+                                <input class="with-gap" name="group1" type="radio" />
+                                <span>Seguridad</span>
+                              </label>
+                            </p>
+                          </form>
+                        </div>
                   </div>
                   <hr>
                   <div id="learn-tres" class="row">
