--- a/src/logeado.html
+++ b/src/logeado.html
@@ -31,65 +31,10 @@
       </ul>
       <form class="form inline my-2">
         <input id="busq" class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Buscar</button>
-        <a href="#container"><button class="btn btn-outline-success" type="button">Login</button></a>
-        <div id="container">
-          <div class="popup">
-            <a href="#">
-              <img  src="https://cdn3.iconfinder.com/data/icons/simple-web-navigation/165/cross-512.png" style="width:25px;height:25px;border-radius:80px;" />
-            </a>
-          </div>
-            <div id="login_ej" class="headerr">
-              <a id="lock" class="btn-floating btn-li">
-                <i class="fa fa-shield"></i></a>
-                <div class="header-title">
-                  <h1>Login</h1>
-                  <p>Introduce los datos de acceso </p>
-                </div>
-              </div>
-              <div class="panel">
-                <p id="mensaje-error1"> </p>
-                <form id="form" action="logeado.html" method="get">
-                  <div class="usuario">
-                    <label for="email" class="control-label">Usuario</label>
-                    <input type="text" name="email" id="email" required placeholder="usuario@email.com">
-                  </div>
-                  <div class="panell">
-                    <label class="control-label" for="password">Password</label>
-                    <input type="password" name="password" id="password" required placeholder="*******" >
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-1">
-                      <div class="remember">
-                        <input name="remember" class="styled" type="checkbox">
-                        <label for="checkbox">
-                          <p>Remember</p>
-                        </label>
-                      </div>
-                    </div>
-                    <div class="col-lg-1">
-                      <input id="submit1" class="btn btn-outline-success" type="submit" value="Login"/>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            <!-- <div id="usuario_ej" class="usuario_logged">
-              <h1> Bienvenido a nuestro web-site </h1>
-              <p id="user_logged"> Actualmente te encuentras logeado en nuestro sitio. </p>
-              <button id="logout"class="btn btn-outline-success" type="button" onclick="logout()">Logout</button> -->
+        <input class="btn btn-outline-success" type="submit" value="Buscar"/>
 
-              <!-- <p> Login </p>
-              <form action="datos.php" method="get">
-              <input class="usuario/email" type="text" name="usuario" placeholder="usuario@email.com">
-              <input class="passwd" type="password" required name="contraseña" placeholder="Passwd">
-              <input type="submit" name="entrar">
-              <input type="reset" name="reseteo">
-
-            </form> -->
-          </div>
         </form>
       </div>
-    </div>
     </nav> <!--informacion google maps,correo, -->
     <body>
       <div class="body-main">
