--- a/src/registro.html
+++ b/src/registro.html
@@ -18,13 +18,14 @@
 			<div class="box-reg">
 				<div class="box-regg">
 				<h3 id="tit-reg"> Registrarse </h3>
-				<form class="" method="post" action="#">
+        <p id="mensaje-error"> </p>
+				<form id="form" method="get" action="#">
 						<div class="form-reg">
-							<label for="name" class="cols-sm-3 control-label">User</label>
+							<label for="name" class=" control-label">User</label>
 							<div class="cols-sm-8">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-user fa"></i></span>
-									<input type="text" class="form-style" id="name"  placeholder="username">
+									<input type="text" class="form-control" name="name" id="name" placeholder="username"/>
 								</div>
 							</div>
 						</div>
@@ -33,18 +34,8 @@
 							<div class="cols-sm-10">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-envelope fa" ></i></span>
-									<input type="text" name="email" id="emailInput" class="form-style" placeholder="email">
-                  <script>
-                  function comp_correo(email){
-                     var filtro = /^([a-zA-Z0-9]{2,})+@(([a-zA-Z0-9]{2,20})+([_-]{0,1})+([a-zA-Z]){1,})\.[a-zA-Z0-9]{2,8}(?:\.[a-z]{1,5})?$/;
-                        return filtro.test(email);
-                   }
-                  function validacion(event) {
-                    if (comp_correo(event.target.value)) {
-                      document.getElementById("emailInput").style.color = 'green';
-                          }}
-                      document.getElementById("emailInput").addEventListener("keyup", validacion);
-                  </script>
+									<input type="text" class="form-control" name="emailInput" id="emailInput" placeholder="email">
+
 								</div>
 							</div>
 						</div>
@@ -53,7 +44,7 @@
 							<div class="cols-sm-8">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-lock fa-lg"></i></span>
-									<input type="password" class="form-style" id="password" placeholder="password">
+									<input type="password" class="form-control" name="password" id="password" placeholder="password">
 								</div>
 							</div>
 						</div>
@@ -62,18 +53,31 @@
 							<div class="cols-sm-8">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-lock fa-lg"></i></span>
-									<input type="password" class="form-style" id="confirm"  placeholder="password">
+									<input type="password" class="form-control" name="confirm" id="confirm" placeholder="password">
 								</div>
 							</div>
 						</div>
 						<div class="form-reg">
-              <button id="buton-reg"class="btn btn-primary btn-lg btn-block login-button" type="submit" value="request">Registrarse</button>
-
+              <input id="submit" class="btn btn-primary btn-lg btn-block login-button" type="submit" value="Registrarse">
+              <!-- <script>
+                function campos_vacios(){
+                          var a=document.forms["Registroo"]["resp1"].value;
+                          var b=document.forms["Registroo"]["resp2"].value;
+                          var c=document.forms["Registroo"]["resp3"].value;
+                          var d=document.forms["Registroo"]["resp4"].value;
+                          // if (a == ""){
+                            window.alert(a);
+                            return false;}
+              </script> -->
 						</div>
+            <div class="form-reg">
+              <input id="reset" class="btn btn-secondary btn-lg btn-block login-button" type="reset" value="Reset">
+            </div>
 					</form>
 				</div>
 			</div>
 		</div>
-    <script src="functions.js"> </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="functions.js"></script>
  </body>
  </html>
