--- a/src/challenges.html
+++ b/src/challenges.html
@@ -23,11 +23,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class = "navbar-nav mr-6">
   <!-- <li class="nav-item"><a class="nav-link" href="home">Página principal</a></li> -->
-  <li class="nav-item"><a class="nav-link" href="aprender">Learn</a></li>
+  <li class="nav-item"><a class="nav-link" href="learn.html">Learn</a></li>
   <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
   <li class="nav-item"><a class="nav-link" href="foro">Forum</a></li>
   <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
-  <li class="nav-item"><a class="nav-link" href="about">About</a></li>
+  <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
 </ul>
 <form class="form inline my-2">
    <input class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search">
