--- a/src/logeado.html
+++ b/src/logeado.html
@@ -26,7 +26,7 @@
         <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
         <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
         <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
-        <li class="nav-item"><a class="nav-link" href="about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="registro.html">Registrarse</a></li>
       </ul>
       <form class="form inline my-2">
@@ -216,7 +216,7 @@
                                       <h1> Ubicacion </h1>
                                       <p>Sta.Cruz de Tenerife</p>
                                       <a class="btn-floating btn-li" href="https://bit.ly/2zxCP8J" target="_blank">
-                                        <i class="fa fa-map-marker" style="font-size:24px"></i>
+                                        <i id="buton-ubic" class="fa fa-map-marker" style="font-size:24px"></i>
                                       </div>
                                     </div>
                                   </div>
