--- a/src/ia.html
+++ b/src/ia.html
@@ -123,6 +123,17 @@
                   <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Media</span></br></br>
                 <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">5 puntos!</span></p></br>
                 <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Ejercicio</a>
+                <div class="rating0">
+                  <p> Rate Challenge!</p>
+                <!-- no funciona como deberia -->
+                <div class="rating">
+                <span title="rating1">&#9744;</span>
+                <span title="rating2">&#9744;</span>
+                <span title="rating3">&#9744;</span>
+                <span title="rating4">&#9744;</span>
+                <span title="rating5">&#9744;</span>
+                </div>
+              </div>
                 </div>
               </div>
             <hr>
@@ -139,6 +150,17 @@
                     <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Media</span></br></br>
                     <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">6 puntos!</span></p></br>
                   <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Ejercicio</a>
+                  <div class="rating0">
+                    <p> Rate Challenge!</p>
+                  <!-- no funciona como deberia -->
+                  <div class="rating">
+                  <span title="rating1">&#9744;</span>
+                  <span title="rating2">&#9744;</span>
+                  <span title="rating3">&#9744;</span>
+                  <span title="rating4">&#9744;</span>
+                  <span title="rating5">&#9744;</span>
+                  </div>
+                </div>
                   </div>
                 </div>
                   <hr>
@@ -157,6 +179,17 @@
                           <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Dificil</span></br></br>
                         <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">8 puntos!</span></p></br>
                         <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Ejercicio</a>
+                        <div class="rating0">
+                          <p> Rate Challenge!</p>
+                        <!-- no funciona como deberia -->
+                        <div class="rating">
+                        <span title="rating1">&#9744;</span>
+                        <span title="rating2">&#9744;</span>
+                        <span title="rating3">&#9744;</span>
+                        <span title="rating4">&#9744;</span>
+                        <span title="rating5">&#9744;</span>
+                        </div>
+                      </div>
                         </div>
                       </div>
                       <hr>
