--- a/src/logeado.html
+++ b/src/logeado.html
@@ -41,7 +41,7 @@
         <div class="body-center">
           <header class="header">
           <div class="titulo">
-            <h1>Sys-Learn </h1>   <!--anadir lo de font-style para el viewport que no funciona -->
+            <h1>Sys-Learn </h1> 
             <h2>Welcome to this amazing website.</h2>
             <h3>Here you can become a real programmer!</h3>
         </div>
