--- a/src/algoritmos.html
+++ b/src/algoritmos.html
@@ -129,6 +129,17 @@
                   <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Facil</span></br></br>
                 <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">3 puntos!</span></p></br>
                 <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Algoritmo</a>
+                <div class="rating0">
+                  <p> Rate Challenge!</p>
+                <!-- no funciona como deberia -->
+                <div class="rating">
+                <span title="rating1">&#9744;</span>
+                <span title="rating2">&#9744;</span>
+                <span title="rating3">&#9744;</span>
+                <span title="rating4">&#9744;</span>
+                <span title="rating5">&#9744;</span>
+                </div>
+              </div>
                 </div>
               </div>
             <hr>
@@ -151,6 +162,17 @@
                     <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Facil</span></br></br>
                     <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">4 puntos!</span></p></br>
                   <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Algoritmo</a>
+                  <div class="rating0">
+                    <p> Rate Challenge!</p>
+                  <!-- no funciona como deberia -->
+                  <div class="rating">
+                  <span title="rating1">&#9744;</span>
+                  <span title="rating2">&#9744;</span>
+                  <span title="rating3">&#9744;</span>
+                  <span title="rating4">&#9744;</span>
+                  <span title="rating5">&#9744;</span>
+                  </div>
+                </div>
                   </div>
                 </div>
                   <hr>
@@ -175,6 +197,17 @@
                           <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Media</span></br></br>
                         <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">6 puntos!</span></p></br>
                         <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Algoritmo</a>
+                        <div class="rating0">
+                          <p> Rate Challenge!</p>
+                        <!-- no funciona como deberia -->
+                        <div class="rating">
+                        <span title="rating1">&#9744;</span>
+                        <span title="rating2">&#9744;</span>
+                        <span title="rating3">&#9744;</span>
+                        <span title="rating4">&#9744;</span>
+                        <span title="rating5">&#9744;</span>
+                        </div>
+                      </div>
                         </div>
                       </div>
                       <hr>
@@ -199,6 +232,17 @@
                               <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Facil</span></br></br>
                             <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">2 puntos!</span></p></br>
                             <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Algoritmo</a>
+                            <div class="rating0">
+                              <p> Rate Challenge!</p>
+                            <!-- no funciona como deberia -->
+                            <div class="rating">
+                            <span title="rating1">&#9744;</span>
+                            <span title="rating2">&#9744;</span>
+                            <span title="rating3">&#9744;</span>
+                            <span title="rating4">&#9744;</span>
+                            <span title="rating5">&#9744;</span>
+                            </div>
+                          </div>
                             </div>
                           </div>
                           <hr>
@@ -226,6 +270,17 @@
                                   <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Media</span></br></br>
                                 <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">5 puntos!</span></p></br>
                                 <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Algoritmo</a>
+                                <div class="rating0">
+                                  <p> Rate Challenge!</p>
+                                <!-- no funciona como deberia -->
+                                <div class="rating">
+                                <span title="rating1">&#9744;</span>
+                                <span title="rating2">&#9744;</span>
+                                <span title="rating3">&#9744;</span>
+                                <span title="rating4">&#9744;</span>
+                                <span title="rating5">&#9744;</span>
+                                </div>
+                              </div>
                                 </div>
                               </div>
                               <hr>
