--- a/src/python.html
+++ b/src/python.html
@@ -128,6 +128,17 @@
                   <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Facil</span></br></br>
                 <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">4 puntos!</span></p></br>
                 <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Ejercicios</a>
+                <div class="rating0">
+                  <p> Rate Challenge!</p>
+                <!-- no funciona como deberia -->
+                <div class="rating">
+                <span title="rating1">&#9744;</span>
+                <span title="rating2">&#9744;</span>
+                <span title="rating3">&#9744;</span>
+                <span title="rating4">&#9744;</span>
+                <span title="rating5">&#9744;</span>
+                </div>
+              </div>
                 </div>
               </div>
             <hr>
@@ -160,6 +171,17 @@
                     <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Media</span></br></br>
                     <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">5 puntos!</span></p></br>
                   <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Ejercicios</a>
+                  <div class="rating0">
+                    <p> Rate Challenge!</p>
+                  <!-- no funciona como deberia -->
+                  <div class="rating">
+                  <span title="rating1">&#9744;</span>
+                  <span title="rating2">&#9744;</span>
+                  <span title="rating3">&#9744;</span>
+                  <span title="rating4">&#9744;</span>
+                  <span title="rating5">&#9744;</span>
+                  </div>
+                </div>
                   </div>
                 </div>
                   <hr>
@@ -192,6 +214,17 @@
                           <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Media</span></br></br>
                         <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">5 puntos!</span></p></br>
                         <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Ejercicios</a>
+                        <div class="rating0">
+                          <p> Rate Challenge!</p>
+                        <!-- no funciona como deberia -->
+                        <div class="rating">
+                        <span title="rating1">&#9744;</span>
+                        <span title="rating2">&#9744;</span>
+                        <span title="rating3">&#9744;</span>
+                        <span title="rating4">&#9744;</span>
+                        <span title="rating5">&#9744;</span>
+                        </div>
+                      </div>
                         </div>
                       </div>
                       <hr>
@@ -208,6 +241,17 @@
                                   <span style="color: #0A0A00">Dificultad:</span><span style="color: #0045E8">Facil</span></br></br>
                                 <span style="color: #0A0A00">Puntos a ganar:</span><span style="color: #0045E8">3 puntos!</span></p></br>
                                 <a id="butun" class="btn btn-primary" href="#" role="button">Resolver Ejercicios</a>
+                                <div class="rating0">
+                                  <p> Rate Challenge!</p>
+                                <!-- no funciona como deberia -->
+                                <div class="rating">
+                                <span title="rating1">&#9744;</span>
+                                <span title="rating2">&#9744;</span>
+                                <span title="rating3">&#9744;</span>
+                                <span title="rating4">&#9744;</span>
+                                <span title="rating5">&#9744;</span>
+                                </div>
+                              </div>
                                 </div>
                               </div>
                               <hr>
