--- a/src/logeado.html
+++ b/src/logeado.html
@@ -23,9 +23,9 @@
       <ul class = "navbar-nav mr-6">
         <!-- <li class="nav-item"><a class="nav-link" href="home">Página principal</a></li> -->
         <li class="nav-item"><a class="nav-link" href="learn.html">Learn</a></li>
-        <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
+        <li class="nav-item"><a class="nav-link" href="challenges.html">Challenges</a></li>
         <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
-        <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
+        <li class="nav-item"><a class="nav-link" href="ranking.html">Ranking</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="registro.html">Registrarse</a></li>
       </ul>
@@ -41,7 +41,7 @@
         <div class="body-center">
           <header class="header">
           <div class="titulo">
-            <h1>Sys-Learn </h1> 
+            <h1>Sys-Learn </h1>
             <h2>Welcome to this amazing website.</h2>
             <h3>Here you can become a real programmer!</h3>
         </div>
