--- a/src/ranking.html
+++ b/src/ranking.html
@@ -15,7 +15,7 @@
 <style> body {padding: 0; margin: 0;} </style>
 </head>
 <nav class="navbar navbar-expand-lg navbar-ligth fixed-top">
-<a class="imag" href="index.html"><img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"></a><a class="navbar-brand" class="nav-link" href="index.html">Sys-Learn</a>
+<a class="imag" href="index.html"><img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"></a><a class="navbar-brand" clas="nav-link" href="index.html">Sys-Learn</a>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav mr">
 <li class="nav-item">
@@ -80,58 +80,55 @@
 <body>
 <div class="body-main">
 <div class="body-center">
-<header class="header-challengee">
+<header class="header-ranking">
 <div class="titulo">
-<h1>Retos!</h1>
+<h1>Ranking mundial!</h1>
 </div>
 </header>
 <div class="row">
 <div class="col-lg-8 offset-lg-2">
-<table id="tabla-challengee" class="table table-bordered">
+<table id="tabla-ranking" class="table table-bordered">
 <thead>
 <tr>
-<th>Nombre reto!</th><th>Hecho por:</th><th>Puntos a ganar</th><th>Dificultad</th><th>Fecha inicio</th><th>Fecha final</th><th>%Success</th><th>Categoria</th><th>Dificultad conjunta</th>
+<th>Username</th><th>Country</th><th>XOR(Points)</th><th>Email</th><th>Challenges done</th><th>Chapters learned!</th><th>Last seen</th><th>Total points</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>AES! -A</td><td>Zanuro</td><td>11</td><td>DIFICIL</td><td>11/02/2019</td><td>21/04/2019</td><td>68.2</td><td> CRIPTOGRAFIA </td><td>850.2</td>
+<td>Master johnway</td><td>AUS</td><td>302</td><td>johnn@user.sys</td><td>16</td><td>20</td><td>07/01/2019</td><td>338</td>
 </tr>
 <tr>
-<td>AVL Colored -A</td><td>alexxpop</td><td>14</td><td>DIFICIL</td><td>22/12/2018</td><td>31/12/2018</td><td>44.1</td><td> ESTRUCTURAS DE DATOS </td><td>717.4</td>
+<td>Starter RuudM</td><td>BEL</td><td>78</td><td>ruudverm@user.sys</td><td>2</td><td>4</td><td>07/01/2019</td><td>76</td>
 </tr>
 <tr>
-<td>Arbol utopico -B</td><td>AttiUn</td><td>3</td><td>FACIL</td><td>01/01/2019</td><td>08/02/2019</td><td>72.5</td><td> ALGORITMIA </td><td>317.5</td>
+<td>Starter JoseManuel</td><td>ESP</td><td>94</td><td>josem12@user.sys</td><td>5</td><td>8</td><td> 07/01/2019 </td><td>91</td>
 </tr>
 <tr>
-<td>Arrays dinamic! -B</td><td>alexisstom</td><td>3</td><td>FACIL</td><td>22/10/2018</td><td>12/02/2019</td><td>94.2</td><td> ESTRUCTURAS DE DATOS </td><td>382.6</td>
+<td>Master Zanuro</td><td>ESP</td><td>348</td><td>zansyc@user.sys</td><td>21</td><td>14</td><td>08/01/2019</td><td>383</td>
 </tr>
 <tr>
-<td>El agujero negro! -A</td><td>Zukerg</td><td>18</td><td>DIFICIL</td><td>14/07/2018</td><td>21/4/2019</td><td>21.2</td><td> ALGEBRA </td><td>481.59999999999997</td>
+<td>Starter alexisstom</td><td>GRE</td><td>97</td><td>alexsgrk@user.sys</td><td>8</td><td>7</td><td>05/01/2019</td><td>98</td>
 </tr>
 <tr>
-<td>Factoriales long -M</td><td>zorkthegreat</td><td>8</td><td>MEDIA</td><td>27/12/2018</td><td>20/01/2019</td><td>56.23</td><td> COMPUTACION </td><td>549.8399999999999</td>
+<td>Sys AttiUn</td><td>HUN</td><td>102</td><td>atti99@user.sys</td><td>8</td><td>10</td><td>27/12/2018</td><td>826</td>
 </tr>
 <tr>
-<td>Fibonacci heuristic -A</td><td>johnway</td><td>13</td><td>DIFICIL</td><td>18/11/2018</td><td>21/3/2019</td><td>48.8</td><td> ALGEBRA </td><td>734.4</td>
+<td>Sys alexxpop</td><td>ROU</td><td>145</td><td>alexcareepop@user.sys</td><td>18</td><td>2</td><td>03/01/2019</td><td>2612</td>
 </tr>
 <tr>
-<td>Fractales -A</td><td>johnway</td><td>11</td><td>DIFICIL</td><td>22/11/2018</td><td>23/02/2019</td><td>52.1</td><td> PROGRAMACION FUNCIONAL </td><td>673.1</td>
+<td>Sys BorissStoic</td><td>RUS</td><td>110</td><td>borissth@user.sys</td><td>7</td><td>9</td><td>08/01/2019</td><td>779</td>
 </tr>
 <tr>
-<td>Huffman -M</td><td>Zanuro</td><td>8</td><td>MEDIA</td><td>14/11/2018</td><td>20/01/2019</td><td>67.8</td><td> ESTRUCTURAS DE DATOS </td><td>642.4</td>
+<td>Sys Magnuss00</td><td>SWE</td><td>121</td><td>magnusscarl@user.sys</td><td>11</td><td>7</td><td>01/01/2019</td><td>1338</td>
 </tr>
 <tr>
-<td>Introd. arboles! -B</td><td>JoseManuel</td><td>4</td><td>FACIL</td><td>20/08/2018</td><td>03/02/2019</td><td>93.3</td><td> ESTRUCTURAS DE DATOS </td><td>473.2</td>
+<td>Starter JamesHeath</td><td>UK</td><td>68</td><td>jameshh@user.sys</td><td>8</td><td>9</td><td>02/01/2019</td><td>67</td>
 </tr>
 <tr>
-<td>La cueva sin fin! -A</td><td>alexxpop</td><td>11</td><td>DIFICIL</td><td>12/09/2018</td><td>12/04/2019</td><td>77.6</td><td> ALGORITMIA </td><td>953.5999999999999</td>
+<td>Sys zorkthegreat</td><td>UKR</td><td>178</td><td>zorkabb@user.sys</td><td>13</td><td>6</td><td>06/01/2019</td><td>2320</td>
 </tr>
 <tr>
-<td>N*N Queen -A</td><td>Zanuro</td><td>12</td><td>DIFICIL</td><td>20/12/2018</td><td>30/01/2019</td><td>45.5</td><td> IA </td><td>646</td>
-</tr>
-<tr>
-<td>Twofish! -M</td><td>alexxpop</td><td>9</td><td>MEDIA</td><td>07/01/2019</td><td>21/02/2019</td><td>75.2</td><td> CRIPTOGRAFIA </td><td>776.8000000000001</td>
+<td>Sys Zukerg</td><td>USA</td><td>175</td><td>zukgb1@user.sys</td><td>13</td><td>9</td><td>05/01/2019</td><td>2284</td>
 </tr>
 </tbody>
 </table>
