--- a/src/algoritmos.html
+++ b/src/algoritmos.html
@@ -21,9 +21,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class = "navbar-nav mr">
         <li class="nav-item"><a class="nav-link" href="learn.html">Learn</a></li>
-        <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
+        <li class="nav-item"><a class="nav-link" href="challenges.html">Challenges</a></li>
         <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
-        <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
+        <li class="nav-item"><a class="nav-link" href="ranking.html">Ranking</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="registro.html">Registrarse</a></li>
       </ul>
