--- a/src/index.html
+++ b/src/index.html
@@ -3,34 +3,34 @@
 <html lang="en"
 <head>
   <meta http-equiv="content-type" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
-  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes" />
+  <meta charset="UTF-8" />
   <title> SysLearn </title>
-  <link rel="stylesheet" type="text/css" href="design.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="design.css"/>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" /
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"/>
   <link rel="shortcut icon" type="image/x-icon" href="logo.ico"/>
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"/>
   <style> body {padding: 0; margin: 0;} </style>
 
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-ligth fixed-top">
-  <a class ="imag"href="index.html"><img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"/>
+  <a class ="imag" href="index.html"> <img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"></img></a>
     <a class="navbar-brand" class="nav-link" href="index.html">Sys-Learn</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class = "navbar-nav mr">
         <li class="nav-item"><a class="nav-link" href="learn.html">Learn</a></li>
-        <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
+        <li class="nav-item"><a class="nav-link" href="challenges.html">Challenges</a></li>
         <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
-        <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
+        <li class="nav-item"><a class="nav-link" href="ranking.html">Ranking</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="registro.html">Registrarse</a></li>
       </ul>
       <form class="form inline my-2">
-        <input id="busq" class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search">
+        <input id="busq" class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search"/>
         <button class="btn btn-outline-success" type="button">Buscar</button>
         <a href="#container"><button class="btn btn-outline-success" type="button">Login</button></a>
         <div id="container">
@@ -52,16 +52,16 @@
                 <form id="form" action="logeado.html" method="get">
                   <div class="usuario">
                     <label for="email" class="control-label">Usuario</label>
-                    <input type="text" name="email" id="email" required placeholder="usuario@email.com">
+                    <input type="text" name="email" id="email" placeholder="usuario@email.com"/>
                   </div>
                   <div class="panell">
                     <label class="control-label" for="password">Password</label>
-                    <input type="password" pattern=".{4,}" required title="4 caracteres minimo" name="password" id="password" required placeholder="*******" >
+                    <input type="password" pattern="[0-9A-Za-z]{4,}" title="4 caracteres minimo(letras y cifras)" name="password" id="password" placeholder="*******" />
                   </div>
                   <div class="row">
                     <div class="col-lg-1">
                       <div class="remember">
-                        <input name="remember" class="styled" type="checkbox">
+                        <input name="remember" class="styled" type="checkbox"/>
                         <label for="checkbox">
                           <p>Remember</p>
                         </label>
@@ -90,7 +90,7 @@
         </form>
       </div>
     </nav>
-    <body>
+<body>
       <div class="body-main">
         <div class="body-center">
           <header class="header">
@@ -234,7 +234,7 @@
                                     <p>Este sitio web es para todas aquellas
                                       personas apasionadas del mundo de la programacion<br>
                                       y sus divertidas partes(o menos divertidas).<br><br></p>
-                                      <h3>&copy Sys-Learn 2018</h3>
+                                      <h3>&copy Sys-Learn 2019</h3>
                                       <nav class="nav-item"><a class="nav-link" href="term.html" target="_blank">Terms of Service</a></nav>
 
                                     </div>
