--- a/src/registro.html
+++ b/src/registro.html
@@ -44,7 +44,7 @@
 							<div class="cols-sm-8">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-lock fa-lg"></i></span>
-									<input type="password" class="form-control" pattern=".{4,}" required title="4 caracteres minimo" name="password" id="password" placeholder="password">
+									<input type="password" class="form-control" pattern="[0-9A-Za-z]{4,}" required title="4 caracteres minimo" name="password" id="password" placeholder="password">
 								</div>
 							</div>
 						</div>
@@ -53,7 +53,7 @@
 							<div class="cols-sm-8">
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-lock fa-lg"></i></span>
-									<input type="password" class="form-control" pattern=".{4,}" required title="4 caracteres minimo" name="confirm" id="confirm" placeholder="password">
+									<input type="password" class="form-control" pattern="[0-9A-Za-z]{4,}" required title="4 caracteres minimo" name="confirm" id="confirm" placeholder="password">
 								</div>
 							</div>
 						</div>
