--- a/src/algoritmos.html
+++ b/src/algoritmos.html
@@ -16,7 +16,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-ligth fixed-top">
-  <a class ="imag"href="index.html"><img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"/>
+  <a class ="imag" href="index.html"> <img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"></img></a>
     <a class="navbar-brand" class="nav-link" href="index.html">Sys-Learn</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class = "navbar-nav mr">
@@ -28,8 +28,8 @@
         <li class="nav-item"><a class="nav-link" href="registro.html">Registrarse</a></li>
       </ul>
       <form class="form inline my-2">
-        <input id="busq" class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Buscar</button>
+        <input id="busq" class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search"/>
+        <button class="btn btn-outline-success" type="button">Buscar</button>
         <a href="#container"><button class="btn btn-outline-success" type="button">Login</button></a>
         <div id="container">
           <div class="popup">
@@ -50,16 +50,16 @@
                 <form id="form" action="logeado.html" method="get">
                   <div class="usuario">
                     <label for="email" class="control-label">Usuario</label>
-                    <input type="text" name="email" id="email" required placeholder="usuario@email.com">
+                    <input type="text" name="email" id="email" placeholder="usuario@email.com"/>
                   </div>
                   <div class="panell">
                     <label class="control-label" for="password">Password</label>
-                    <input type="password" pattern=".{4,}" required title="4 caracteres minimo" name="password" id="password" required placeholder="*******" >
+                    <input type="password" pattern="[0-9A-Za-z]{4,}" title="4 caracteres minimo(letras y cifras)" name="password" id="password" placeholder="*******" />
                   </div>
                   <div class="row">
                     <div class="col-lg-1">
                       <div class="remember">
-                        <input name="remember" class="styled" type="checkbox">
+                        <input name="remember" class="styled" type="checkbox"/>
                         <label for="checkbox">
                           <p>Remember</p>
                         </label>
@@ -88,7 +88,7 @@
         </form>
       </div>
     </nav>
-    <body>
+<body>
       <header class="header1">
         <div class="container-fluid">
           <div class="algoritmos-titulo">
