--- a/src/learn.html
+++ b/src/learn.html
@@ -56,7 +56,7 @@
                   </div>
                   <div class="panell">
                     <label class="control-label" for="password">Password</label>
-                    <input type="password" pattern="[0-9A-Za-z]{4,}" title="4 caracteres minimo(letras y cifras)" name="password" id="password" placeholder="*******" />
+                    <input type="password" pattern=".{4,}" title="4 caracteres minimo(letras y cifras)" name="password" id="password" placeholder="*******" />
                   </div>
                   <div class="row">
                     <div class="col-lg-1">
